Bug 6671: STG: Reply filed not visible

--- a/src/pages/external-access/ticket-sms/ticket-sms.scss
+++ b/src/pages/external-access/ticket-sms/ticket-sms.scss
@@ -13,3 +13,7 @@
 .outgoing_sms {
   background-color: var(--color-primary-800);
 }
+
+.mobile_message_wrapper{
+  height: calc(100vh - 10.875rem);
+}
